# dif

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  bench-report-drawio.md  bench-report-sipi.md  bench-report.md  justfile  plan-format-codecs.md  plan.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: pages.yml
bench/: __init__.py  __main__.py  bench-format-compare.py  codecs.py  compare.py  metric.py  native.py  runner.py
crates/dif-core/: Cargo.toml
crates/dif-core/src/: aa_detect.rs  codec.rs  container.rs  derive.rs  error.rs  format.rs  lib.rs  quantize.rs  regional.rs  regions.rs  varint.rs
crates/dif-py/: Cargo.toml  pyproject.toml
crates/dif-py/src/: lib.rs
crates/dif-wasm/: Cargo.toml
crates/dif-wasm/src/: lib.rs
crates/kanzi-shim/: Cargo.toml  build.rs  selftest.py  wrapper.cpp
crates/kanzi-shim/src/: lib.rs
crates/libbsc-shim/: Cargo.toml  build.rs  wrapper.cpp
crates/libbsc-shim/src/: lib.rs
crates/lzav-shim/: Cargo.toml  build.rs  wrapper.c
crates/lzav-shim/src/: lib.rs
data/dif-examples/drawio/: 5c-marketing-analysis.dif  C4.dif  CSVimport-examples.dif  aws-internet-of-things.dif  aws-simple-architecture.dif  azure-architecture-example.dif  board-visual-tutorial.dif  bpmn-2-example.dif  bpmn-3-example.dif  cell-culture-flow.dif  circuit-examples.dif  citrix-hybrid-infrastructure.dif  class-diagram-example.dif  concept-map-uml-diagrams-overview.dif  diagram-integrations.dif  floorplan-apartment.dif  focus-lens.dif  gemfile-dependency-graph.dif  gitflow-examples.dif  home-lab-example.dif  horse-labelled.dif  infographic-example-1.dif  infographic-example-2.dif  infographic-example-3.dif  infographic-example-4.dif  infographic-example-5.dif  infographic-project-steps.dif  infographic-rockpool.dif  infographic-shape-library-layers.dif  infographic-water-cycle.dif  ishikawa-diagram-examples.dif  kanban-examples.dif  light-spectrum.dif  maths-examples.dif  moon-habitat.dif  pestel-analysis.dif  project-phase-timeline.dif  rack-diagram-simple-server.dif  requirements-flow.dif  retail-diagrams.dif  (+22 more)
data/dif-examples/usc-sipi-misc/: 4.1.01.dif  4.1.02.dif  4.1.03.dif  4.1.04.dif  4.1.05.dif  4.1.06.dif  4.1.07.dif  4.1.08.dif  4.2.01.dif  4.2.03.dif  4.2.05.dif  4.2.06.dif  (+27 more)
dif-examples/drawio/: C4.dif  CSVimport-examples.dif  board-visual-tutorial.dif  class-diagram-example.dif  diagram-integrations.dif  floorplan-apartment.dif  focus-lens.dif  gitflow-examples.dif  home-lab-example.dif  infographic-example-1.dif  infographic-example-5.dif  infographic-shape-library-layers.dif  ishikawa-diagram-examples.dif  light-spectrum.dif  logic-examples.dif  maths-examples.dif  pestel-analysis.dif  project-phase-timeline.dif  requirements-flow.dif  salesforce-diagram-example.dif  sankey-diagrams.dif  sequence-diagram-examples.dif  story-map.dif  threat-modelling.dif  timeline-example.dif  uml-component-example.dif  uml-composite-structure-collaboration-use-example.dif  uml-timing-example.dif  veaam-network-diagram.dif  website-roles-products.dif
dif-examples/usc-sipi-misc/: 4.1.01.dif  4.1.04.dif  4.1.05.dif  4.1.08.dif  4.2.03.dif  4.2.05.dif  5.1.09.dif  5.1.10.dif  5.1.11.dif  5.2.09.dif  7.1.01.dif  7.1.05.dif  7.1.06.dif  7.1.08.dif
dif_tools/: __init__.py  __main__.py  colorspace.py  convert.py  drawio.py  themes.py
docs/: bench-formats-mt-freq-index.md  bench-formats-mt-freq-index.tsv  bench-formats-mt.md  plan-format-codecs.md  plan-frequency-based-index.md  plan-v3.md  plan.md
docs/benchmarks/: bench-codecs-7640u-v3.md  bench-codecs-7640u-v3.tsv  bench-codecs-9800x3d-v3.md  bench-codecs-9800x3d-v3.tsv  bench-formats-7640u-v3-frame.md  bench-formats-7640u-v3-frame.tsv  bench-formats-7640u-v3-outer.md  bench-formats-7640u-v3-outer.tsv  bench-formats-7640u-v3-palette.md  bench-formats-7640u-v3-palette.tsv  bench-formats-7640u-v3.md  bench-formats-7640u-v3.tsv  bench-formats-9800x3d-v2-mt.md  bench-formats-9800x3d-v2-mt.tsv  bench-formats-9800x3d-v3-frame.md  bench-formats-9800x3d-v3-frame.tsv  bench-formats-9800x3d-v3-mt-frame.md  bench-formats-9800x3d-v3-mt-frame.tsv  bench-formats-9800x3d-v3-mt-palette.md  bench-formats-9800x3d-v3-mt-palette.tsv  bench-formats-9800x3d-v3-mt.md  bench-formats-9800x3d-v3-mt.tsv  bench-formats-9800x3d-v3-outer.md  bench-formats-9800x3d-v3-outer.tsv  bench-formats-9800x3d-v3-palette.md  bench-formats-9800x3d-v3-palette.tsv  bench-formats-9800x3d-v3-st-frame.md  bench-formats-9800x3d-v3-st-frame.tsv  bench-formats-9800x3d-v3-st-palette.md  bench-formats-9800x3d-v3-st-palette.tsv  bench-formats-9800x3d-v3-zst10-16b.md  bench-formats-9800x3d-v3-zst10-16b.tsv  bench-formats-9800x3d-v3-zst3-16b.md  bench-formats-9800x3d-v3-zst3-16b.tsv  bench-formats-9800x3d-v3.md  bench-formats-9800x3d-v3.tsv  bench-formats-mt-freq-index.md  bench-formats-mt.tsv  drawio.md
docs/plan/: plan-format-codecs.md  plan-frequency-based-index.md  plan-memory-profiling.md  plan-multi-frame.md  plan-v3.md  plan.md  region-aware-dark-derivation.md
docs/spec/: dif-spec.typ  refs.bib
extension/: README.md  package.json  tsconfig.json
extension/media/: viewer.js
extension/src/: extension.ts
py/: gen_flowchart.py  regen_flowchart.py
py/bench/: __main__.py  codecs.py  compare.py  memprofile.py  metric.py  native.py  runner.py
py/dif_tools/: __init__.py  __main__.py  convert.py  drawio.py  themes.py
py/tests/: test_bench.py  test_bench_codecs.py  test_bench_native.py  test_cli.py  test_codec.py  test_compare.py  test_convert.py  test_drawio.py  test_memprofile.py
py/typings/: dif.pyi
spec/: dif-spec.typ
tests/: test_bench.py  test_codec.py  test_convert.py  test_drawio.py
tests/wasm/: smoke.mjs  wasi-resolve-hook.mjs  wasi-resolve.mjs
typings/: dif.pyi
web/: flowchart.dif  index.html  main.js  regen_flowchart.py
web/demo/: examples.html  flowchart.dif  gallery.js  index.html  main.js  viewer.js  wasi_shim.js
web/extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
web/wasm-test/: bench.mjs  smoke.mjs  wasi-resolve-hook.mjs
(+5 files in other folders)
