[project]
name = "dif-tools"
version = "0.2.0"
description = "Converters, tests, and benchmarks for the DIF (Diagram Image Format)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "imagecodecs>=2026.5.10",
    "zstandard>=0.25.0",
    "brotli>=1.2.0",
    "lz4>=4.4.5",
    "deflate>=0.8.1",
    "bzip3>=0.1.9",
    "pyzstd>=0.19.1",
]

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "pytest>=9.0.3",
    "black>=26.5.1",
    "ruff>=0.15.15",
    "ty>=0.0.40",
    # Cross-compile the wasm decoder's C codec deps (lzav, zstd) via zig cc.
    # Pulls `ziglang` (the zig binary wheel) automatically, so no system zig.
    "cargo-zigbuild>=0.22.3",
    "matplotlib>=3.10.9",
    "pytest-cov>=7.1.0",
    "patchelf>=0.17.2.4",
]

# Virtual project: deps only, nothing to build here. The `dif` extension is
# built separately with `uv run maturin develop -m crates/dif-py/Cargo.toml`.
[tool.uv]
package = false

[tool.black]
target-version = ["py312"]
# Vendored submodules (e.g. kanzi-cpp) ship their own .py files — never reformat them.
extend-exclude = '''/(crates/[^/]+/vendor|third_party)/'''

[tool.ruff]
target-version = "py312"
extend-exclude = ["crates/*/vendor", "third_party"]

[tool.pytest.ini_options]
pythonpath = ["py"]
testpaths = ["py/tests"]
markers = ["slow: integration tests needing external tools (e.g. podman)"]

# Coverage of the Python source (the `dif` core is Rust, measured by `just cov`).
[tool.coverage.run]
source_pkgs = ["dif_tools", "bench"]
branch = true
# Standalone matplotlib analysis script (hyphenated, not importable, run by hand
# on two TSVs) — not part of the library surface, so out of the coverage scope.
omit = ["py/bench/bench-format-compare.py"]

[tool.coverage.report]
show_missing = true

[tool.ty.environment]
# Hand-written stub for the compiled `dif` extension module.
extra-paths = ["py/typings"]

[tool.ty.src]
# Vendored submodules (e.g. kanzi-cpp) ship their own .py files — never type-check
# them; mirrors the black/ruff vendor excludes above.
exclude = ["crates/*/vendor", "third_party"]
