[package]
name = "dif-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core codec for the DIF (Diagram Image Format): theme-aware, lossless, palette/grayscale."

[dependencies]
# Pure-Rust, no_std + alloc compression so the core compiles to wasm / embedded
# targets with no native dependencies.
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }
# LZ4 (lz4_flex) is pure-Rust no_std+alloc, so it stays in the portable set and
# decodes in the wasm build. `frame` feature off → raw block API with known raw_len.
lz4_flex = { version = "0.11", default-features = false }

# Brotli needs std (its streaming Reader/Writer API); gated behind the `std` feature.
brotli = { version = "8", optional = true }

# Native (C-linked) codecs; imply std and are off in no_std / wasm builds.
zstd-safe = { version = "7.2", optional = true }
# libdeflate encoder (standard DEFLATE stream, decoded everywhere by miniz_oxide).
libdeflater = { version = "1.23", optional = true }
# lzav-1 via the vendored C shim (avaneev/lzav); native/wasm-native only.
lzav-shim = { path = "../lzav-shim", optional = true }

[features]
# Default is no_std + alloc: store / deflate / lz4, the pure-Rust portable core.
default = []
# `std` unlocks the Brotli codec (id 2). Enable it for the full pure-Rust set.
std = ["dep:brotli"]
# Shared C codec set (zstd id 4 + lzav id 6). Linked natively on the host and
# cross-compiled to wasm via zig for the browser decoder (see `wasm-native`).
c-codecs = ["std", "dep:zstd-safe", "dep:lzav-shim"]
# Native host build: the C codecs plus the libdeflate DEFLATE encoder.
native = ["c-codecs", "dep:libdeflater"]
# wasm decoder with the C codecs cross-compiled (decode-only, so no libdeflate
# encoder). Build with `cargo zigbuild` so the C deps compile to wasm.
wasm-native = ["c-codecs"]
