[package]
name = "dif-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core codec for the DIF (Diagram Image Format): theme-aware, lossless, palette/grayscale."

[dependencies]
# Pure-Rust, no_std + alloc compression so the core compiles to wasm / embedded
# targets with no native dependencies.
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }
# LZ4 (lz4_flex) is pure-Rust no_std+alloc, so it stays in the portable set and
# decodes in the wasm build. `frame` feature off → raw block API with known raw_len.
lz4_flex = { version = "0.13", default-features = false }

# Brotli needs std (its streaming Reader/Writer API); gated behind the `std` feature.
brotli = { version = "8", optional = true }

# Fast integer hasher (FxHash) for the std palette-dedup map. std's default
# SipHash is DoS-hardened but ~20-40ns per small-key op; FxHash is a single
# multiply+rotate. Pulled in with `std`; the no_std path uses BTreeMap instead.
rustc-hash = { version = "2", optional = true }

# Native (C-linked) codecs; imply std and are off in no_std / wasm builds.
zstd-safe = { version = "7.2", optional = true }
# libdeflate encoder (standard DEFLATE stream, decoded everywhere by miniz_oxide).
libdeflater = { version = "1.23", optional = true }
# lzav-1 via the vendored C shim (avaneev/lzav); native/wasm-native only.
lzav-shim = { path = "../lzav-shim", optional = true }
# OKLab/OKLCh color math for the encode-side dark-theme derivation (`derive`
# feature). f64-generic, so it reproduces the numpy reference within rounding.
# Encode-only — gated out of the no_std core and the wasm decoder.
palette = { version = "0.7.6", optional = true }

[features]
# Default is no_std + alloc: store / deflate / lz4, the pure-Rust portable core.
default = []
# `std` unlocks the Brotli codec (id 2). Enable it for the full pure-Rust set.
std = ["dep:brotli", "dep:rustc-hash"]
# Shared C codec set (zstd id 4 + lzav id 6). Linked natively on the host and
# cross-compiled to wasm via zig for the browser decoder (see `wasm-native`).
c-codecs = ["std", "dep:zstd-safe", "dep:lzav-shim"]
# Multithreaded zstd encode (nbWorkers). Pulls pthread into libzstd, so it is
# host-only — kept OFF the wasm-native decoder. Output is a standard zstd frame,
# decoded by the normal single-thread path; no format/version change.
zstd-mt = ["c-codecs", "zstd-safe/zstdmt"]
# Multithreaded brotli encode (`compress_multi`, std::thread). Host-only (kept
# off wasm). Emits a single standard brotli stream (parallel meta-blocks) decoded
# by the normal path; no format change. Worth it for the slow high-quality levels.
brotli-mt = ["std"]
# Encode-side dark-theme derivation (OKLab via `palette`). Encode-only, so it is
# kept off the wasm decoder build to avoid pulling `palette` into the browser.
derive = ["std", "dep:palette"]
# Native host build: the C codecs (incl. multithreaded zstd + brotli), libdeflate
# encoder, and dark-theme derivation.
native = ["c-codecs", "zstd-mt", "brotli-mt", "dep:libdeflater", "derive"]
# wasm decoder with the C codecs cross-compiled (decode-only, so no libdeflate
# encoder and no `derive`). Build with `cargo zigbuild` so the C deps compile to wasm.
wasm-native = ["c-codecs"]
