[package]
name = "dif-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for the DIF codec (built with maturin)."

[lib]
name = "dif"
crate-type = ["cdylib"]

[dependencies]
# `native` adds the zstd + liblzma codecs (Python is a native build, not wasm).
dif-core = { path = "../dif-core", features = ["native"] }
pyo3 = { version = "0.24", features = ["extension-module"] }

# Optimized build that keeps debug info. `just py` uses this so benchmark
# numbers reflect real codec speed (plain `dev` is unoptimized and ~10-50x
# slower, which makes `bench formats` DIF timings meaningless).
[profile.dev-release]
inherits = "release"
debug = true
