[package]
name = "dif-py"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Python bindings for the DIF codec (built with maturin)."

[lib]
name = "dif"
crate-type = ["cdylib"]

[dependencies]
# `native` adds zstd + the libdeflate encoder + the lzav C shim (Python is a
# native build, not wasm), so all 8 study variants are encodable from Python.
dif-core = { path = "../dif-core", features = ["native"] }
pyo3 = { version = "0.28", features = ["extension-module"] }

# Optimized build that keeps debug info. `just py` uses this so benchmark
# numbers reflect real codec speed (plain `dev` is unoptimized and ~10-50x
# slower, which makes `bench formats` DIF timings meaningless).
[profile.dev-release]
inherits = "release"
debug = true
