[package]
name = "dif-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly decoder for DIF; reuses dif-core, picks the theme by host mode."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `std` keeps the Brotli codec (the production default) decodable in the browser.
dif-core = { path = "../dif-core", features = ["std"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
