[package]
name = "libbsc-shim"
version = "0.1.0"
edition = "2021"
# Wrapper code is MIT; the vendored libbsc sources under vendor/ are Apache-2.0.
license = "Apache-2.0"
description = "Static C++-shim wrapping IlyaGrebnov/libbsc (BWT) for dif-core's native codec path."
build = "build.rs"

[build-dependencies]
cc = "1"
